# ros

./: README.md
catkin_ws/src/joy_to_twist/: CMakeLists.txt  package.xml
catkin_ws/src/joy_to_twist/launch/: twist_ctrl.launch  uav_twist_ctrl.launch
catkin_ws/src/joy_to_twist/src/: JoyToTwist.cpp
catkin_ws/src/ms_laser_filtering/: CMakeLists.txt  package.xml
catkin_ws/src/ms_laser_filtering/src/: nifti_laser_filtering.cpp
catkin_ws/src/ms_path_planner/: CMakeLists.txt  README.md  manifest.xml
catkin_ws/src/ms_path_planner/cfg/: ClusterPcl.cfg  ClusterPcl.cfg~  DynamicJoinPcl.cfg~  NormalEstimationPcl.cfg  TravAnal.cfg
catkin_ws/src/ms_path_planner/include/ms_path_planner/: ClusterPcl.h  ClusterPcl.h~  ConversionPcl.h  DynamicJoinPcl.h  DynamicJoinPcl.h~  MakeNormalsMarkers.h  MakeNormalsMarkers.h~  MarkerController.h  MarkerController.h~  NormalEstimationPcl.h~  PathPlanning.h~  TravAnal.h  TravAnal.h~  VoxelGridDownsample.h  VoxelGridDownsample.h~
catkin_ws/src/ms_path_planner/launch/: everything.launch  octomap.launch  path_planner.launch  path_planner_octomap.yaml~  path_planner_octomap_uav1.yaml  path_planner_octomap_ugv1.yaml  path_planner_octomap_ugv2.yaml  traversability_analysis.launch
catkin_ws/src/ms_path_planner/scripts/: path_marker
catkin_ws/src/ms_path_planner/src/: ClusterPcl.cpp  ConversionPcl.cpp  DynamicJoinPcl.cpp  DynamicJoinPcl.cpp~  MarkerController.cpp  NormalEstimationPcl.cpp  PathPlanning.cpp  TravAnal.cpp  compute_normals.cpp  mapping.cpp  pathPlanner.cpp  pathPlanner_modified.cpp  test.cpp  test_clustering.cpp  test_distance_partition.cpp  test_dyn_join_pcl.cpp  test_dyn_join_pcl_w_normal.cpp  test_normal.cpp  test_planner.cpp  test_segmentation.cpp  test_spherical_kdtree.cpp  test_spherical_partition.cpp  test_traversability.cpp  traversability.cpp
catkin_ws/src/ms_trajectory_control/: CMakeLists.txt  package.xml
catkin_ws/src/ms_trajectory_control/include/ms_trajectory_control/: TrajectoryControlActionServer.h
catkin_ws/src/ms_trajectory_control/launch/: trajectory_controller.launch
catkin_ws/src/ms_trajectory_control/src/: TrajectoryControlActionServer.cpp
catkin_ws/src/ms_trajectory_control_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/ms_vrep_ros_simulation/: CMakeLists.txt  package.xml
catkin_ws/src/ms_vrep_ros_simulation/launch/: global_mapping.launch  mapping_uav1.launch  mapping_ugv1.launch  mapping_ugv2.launch  multi_robots_env.launch  traversability_uav1.launch  traversability_ugv1.launch  traversability_ugv2.launch  uav_ugv_env.launch  uav_ugv_ugv_env.launch  uav_urdf.launch  ugv_arm_urdf.launch  ugv_pan_tilt_urdf.launch
catkin_ws/src/ms_vrep_ros_simulation/robot_model/uav/: uav.urdf  uav.urdf~  uav2.urdf  uav3.urdf
catkin_ws/src/ms_vrep_ros_simulation/robot_model/ugv/: nifti_robot_pan_tilt.urdf  nifti_robot_pan_tilt.urdf~  nifti_robot_with_arm.urdf  nifti_robot_with_arm.urdf~
catkin_ws/src/ms_vrep_ros_simulation/rviz/: multi_robots_vrep_ros_simulation.rviz  uav_ugv_traversability.rviz  uav_ugv_ugv.rviz
catkin_ws/src/ms_vrep_ros_simulation/scene/: UAV-UGV-traversability.ttt  UAV-UGV-traversability2.ttt  UAV-UGV-traversability3_simplified.ttt  multi_robot_empty_world.ttt  uav_ctrl_test.ttt
catkin_ws/src/rviz_waypoint_plugin/: CMakeLists.txt  plugin_description.xml
catkin_ws/src/rviz_waypoint_plugin/src/: flag_tool_3d.cpp  flag_tool_3d.h
catkin_ws/src/stigmergy_planner/: CMakeLists.txt  package.xml
catkin_ws/src/stigmergy_planner/include/stigmergy_planner/: StigmergyPlanner.h
catkin_ws/src/stigmergy_planner/script/: path_marker  path_marker~
catkin_ws/src/stigmergy_planner/src/: StigmergyPlanner.cpp
catkin_ws/src/vrep_plugin/: CMakeLists.txt
catkin_ws/src/vrep_ugv_simulation/launch/: vrep_multi_ugv.launch
rosbuild_ws/: README.md  setup.sh
rosbuild_ws/sandbox/rviz_waypoint_plugin/: manifest.xml
rosbuild_ws/sandbox/rviz_waypoint_plugin/src/: flag_tool_3d.cpp
rosbuild_ws/sandbox/waypoint_plugin/: CMakeLists.txt  manifest.xml  plugin_description.xml
rosbuild_ws/sandbox/waypoint_plugin/src/: plant_flag_tool.cpp  plant_flag_tool.h
